# enron_analysis_data

./: README.md
enron_analysis_data/: pyproject.toml
enron_analysis_data/enron_analysis_data/: funtions.py  settings.py
enron_analysis_data/notebooks/.ipynb_checkpoints/: Caso_Enron-checkpoint.ipynb
enron_analysis_data/tests/: test_enron_analysis_data.py
