[tool.poetry]
name = "enron_analysis_data"
version = "0.1.0"
description = ""
authors = ["Claudio Collao <clcollao@alumnos.uai.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
jupyter = "^1.0.0"
importlib-metadata = "^4.4.0"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
